# waycap-rs

./: Cargo.toml  build.rs
src/: lib.rs
src/encoders/: dma_buf_encoder.rs  dynamic_encoder.rs  mod.rs  nvenc_encoder.rs  rgba_image_encoder.rs  vaapi_encoder.rs
src/types/: config.rs
